--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -27,10 +27,11 @@ Don't have permission
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Go to conversation</h4>
+          <center><h2 class="modal-title">It's a match!</h2><center>
+          You and someone are listenning this song
         </div>
         <div class="modal-footer">
-        <center><a class="btn btn-default" href="#" id="go_conversation">Ok</a></center>
+        <center><a class="btn btn-default" href="#" id="go_conversation">Go conversation</a></center>
       
         </div>
       </div>
