--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-3">Welcome to One song one chance</h1>
+    <center><h1 class="display-3">Welcome to One song one chance</h1></center>
     <p class="lead">This place you can find your friends or make friendship and of course chatting a lot, lot, lot..</p>
   </div>
 </div>
